# CrmToVoice

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.langgraph  Dockerfile.webhook  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.claude/: settings.json
.claude/agents/: prompt-engineer.md
.claude/skills/langchain-middleware/: SKILL.md
.claude/skills/langgraph-persistence/: SKILL.md
.github/workflows/: ci.yml
db/: README.md
docs/: Agent.md  CRM.md  folder-structure.md  interpret-speech-eval-findings.md  siri-shortcut-integration.md
docs/backlog/epics/: epic-01-database.md  epic-02-agent-foundations.md  epic-03-graph-core-read-path.md  epic-03-tag-1-single-agent.md  epic-04-siri-integration.md
docs/superpowers/specs/: 2026-07-14-agent-runtime-design.md
scripts/: airtable_manage.py  eval_all_tools_agent.py
src/: README.md
src/crmToVoice/: README.md  config.py  webhook.py
src/crmToVoice/agents/: README.md
src/crmToVoice/airtable/: README.md  client.py  imoveis.py  leads.py  visitas.py
src/crmToVoice/models/: README.md  __init__.py  fields.py  interpretation.py  state.py
tests/: README.md
tests/agents/: README.md
tests/agents/catalog/: README.md
tests/agents/middleware/: README.md
tests/agents/tools/: README.md
tests/integration/: README.md  conftest.py  test_webhook.py
tests/integration/airtable/: README.md  test_imoveis.py  test_leads.py  test_visitas.py
tests/unit/: test_config.py  test_webhook.py
tests/unit/agents/: README.md
tests/unit/airtable/: README.md  test_client.py  (+3 more)
(+31 files in other folders)
